--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,11 +11,17 @@ h1 {
 }
 
 .box {
-  max-width: 400px;
+  width: 400px;
   margin: 50px auto;
   background: white;
   border-radius: 5px;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+}
+
+@media only screen and (max-width: 600px) {
+  .box {
+    width: 80%;
+  }
 }
 
 #heading {
