--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,29 +1,36 @@
 <%- include("header") -%>
 
-<div class="box" id="heading">
-  <h1><%= listTitle %></h1>
-</div>
+<div class="container">
+  <div class="box" id="heading">
+    <h1><%= listTitle %></h1>
+  </div>
 
-<div class="box">
-  <% newListItems.forEach((newItem)=> { %>
-  <form action="/delete" method="post">
-    <div class="item">
-      <input name="checkbox" type="checkbox" value="<%= newItem._id %> " onChange="this.form.submit()"/>
-      <p><%= newItem.name %></p>
-    </div>
-    <input name="listName" type="hidden" value="<%= listTitle %> ">
-  </form>
-  <% }) %>
+  <div class="box">
+    <% newListItems.forEach((newItem)=> { %>
+    <form action="/delete" method="post">
+      <div class="item">
+        <input
+          name="checkbox"
+          type="checkbox"
+          value="<%= newItem._id %> "
+          onChange="this.form.submit()"
+        />
+        <p><%= newItem.name %></p>
+      </div>
+      <input name="listName" type="hidden" value="<%= listTitle %> " />
+    </form>
+    <% }) %>
 
-  <form class="item" action="/" method="post">
-    <input
-      type="text"
-      name="newItem"
-      placeholder="New Item"
-      autocomplete="off"
-    />
-    <button type="submit" name="list" value="<%= listTitle %> ">+</button>
-  </form>
+    <form class="item" action="/" method="post">
+      <input
+        type="text"
+        name="newItem"
+        placeholder="New Item"
+        autocomplete="off"
+      />
+      <button type="submit" name="list" value="<%= listTitle %> ">+</button>
+    </form>
+  </div>
 </div>
 
 <%- include("footer") -%>
